slideshow flicker fix

--- a/css/style.css
+++ b/css/style.css
@@ -4947,6 +4947,7 @@ article.page .content-wrapper {
 
 /* only on firstpage */
 .slideshow.firstpage {
+  height: 530px;
   /*background-attachment: fixed;*/
   background-size: cover;
   background-repeat: no-repeat no-repeat;
